--- a/CorrelationCheck.ipynb
+++ b/CorrelationCheck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,16 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "data_AAPL = pd.read_csv('AAPL.csv')"
+    "data_VIX = pd.read_csv('VIX.csv', parse_dates=['Date'])\n",
+    "data_Obama = pd.read_csv('BarackObama.csv', parse_dates=['Date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -54,33 +57,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>1999-11-16</td>\n",
-       "      <td>89.9918</td>\n",
+       "      <td>2000-01-03</td>\n",
+       "      <td>24.36</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1999-11-17</td>\n",
-       "      <td>90.6880</td>\n",
-       "      <td>0.007736</td>\n",
+       "      <td>2000-01-04</td>\n",
+       "      <td>24.94</td>\n",
+       "      <td>0.023810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>1999-11-18</td>\n",
-       "      <td>91.0630</td>\n",
-       "      <td>0.004135</td>\n",
+       "      <td>2000-01-05</td>\n",
+       "      <td>27.98</td>\n",
+       "      <td>0.121893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>1999-11-19</td>\n",
-       "      <td>89.5000</td>\n",
-       "      <td>-0.017164</td>\n",
+       "      <td>2000-01-06</td>\n",
+       "      <td>26.68</td>\n",
+       "      <td>-0.046462</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>1999-11-22</td>\n",
-       "      <td>91.7515</td>\n",
-       "      <td>0.025156</td>\n",
+       "      <td>2000-01-07</td>\n",
+       "      <td>25.14</td>\n",
+       "      <td>-0.057721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -89,64 +92,396 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5028</td>\n",
-       "      <td>2019-11-11</td>\n",
-       "      <td>258.3000</td>\n",
-       "      <td>-0.001508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5029</td>\n",
+       "      <td>4997</td>\n",
        "      <td>2019-11-12</td>\n",
-       "      <td>261.5500</td>\n",
-       "      <td>0.012582</td>\n",
+       "      <td>12.64</td>\n",
+       "      <td>-0.038783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5030</td>\n",
+       "      <td>4998</td>\n",
        "      <td>2019-11-13</td>\n",
-       "      <td>261.1300</td>\n",
-       "      <td>-0.001606</td>\n",
+       "      <td>12.91</td>\n",
+       "      <td>0.021361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5031</td>\n",
+       "      <td>4999</td>\n",
        "      <td>2019-11-14</td>\n",
-       "      <td>263.7500</td>\n",
-       "      <td>0.010033</td>\n",
+       "      <td>13.16</td>\n",
+       "      <td>0.019365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5032</td>\n",
+       "      <td>5000</td>\n",
        "      <td>2019-11-15</td>\n",
-       "      <td>263.6800</td>\n",
-       "      <td>-0.000265</td>\n",
+       "      <td>12.95</td>\n",
+       "      <td>-0.015957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5001</td>\n",
+       "      <td>2019-11-18</td>\n",
+       "      <td>12.95</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5033 rows × 3 columns</p>\n",
+       "<p>5002 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date     Price    Change\n",
-       "0     1999-11-16   89.9918       NaN\n",
-       "1     1999-11-17   90.6880  0.007736\n",
-       "2     1999-11-18   91.0630  0.004135\n",
-       "3     1999-11-19   89.5000 -0.017164\n",
-       "4     1999-11-22   91.7515  0.025156\n",
-       "...          ...       ...       ...\n",
-       "5028  2019-11-11  258.3000 -0.001508\n",
-       "5029  2019-11-12  261.5500  0.012582\n",
-       "5030  2019-11-13  261.1300 -0.001606\n",
-       "5031  2019-11-14  263.7500  0.010033\n",
-       "5032  2019-11-15  263.6800 -0.000265\n",
+       "           Date  Price    Change\n",
+       "0    2000-01-03  24.36       NaN\n",
+       "1    2000-01-04  24.94  0.023810\n",
+       "2    2000-01-05  27.98  0.121893\n",
+       "3    2000-01-06  26.68 -0.046462\n",
+       "4    2000-01-07  25.14 -0.057721\n",
+       "...         ...    ...       ...\n",
+       "4997 2019-11-12  12.64 -0.038783\n",
+       "4998 2019-11-13  12.91  0.021361\n",
+       "4999 2019-11-14  13.16  0.019365\n",
+       "5000 2019-11-15  12.95 -0.015957\n",
+       "5001 2019-11-18  12.95  0.000000\n",
        "\n",
-       "[5033 rows x 3 columns]"
+       "[5002 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_AAPL"
+    "data_VIX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>author</th>\n",
+       "      <th>content</th>\n",
+       "      <th>number_of_likes</th>\n",
+       "      <th>number_of_shares</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2014-01-08 14:57:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>Make #53 special for #44: http://t.co/leGTnedv...</td>\n",
+       "      <td>1512</td>\n",
+       "      <td>726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2014-01-08 17:58:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>Job growth has exceeded 200,000 for the sixth ...</td>\n",
+       "      <td>816</td>\n",
+       "      <td>556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2014-01-08 18:46:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>Happening now: President Obama delivers a stat...</td>\n",
+       "      <td>491</td>\n",
+       "      <td>288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2014-01-08 18:54:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>\"That's the longest streak of private sector j...</td>\n",
+       "      <td>804</td>\n",
+       "      <td>619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2014-01-08 18:57:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>\"The fact is we could be much further along .....</td>\n",
+       "      <td>1505</td>\n",
+       "      <td>1260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2858</td>\n",
+       "      <td>2016-12-10 16:35:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>Let's leave our children and grandchildren a p...</td>\n",
+       "      <td>12072</td>\n",
+       "      <td>3692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2859</td>\n",
+       "      <td>2016-12-10 17:57:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>Last week, more than 190 countries reached a l...</td>\n",
+       "      <td>3283</td>\n",
+       "      <td>855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2860</td>\n",
+       "      <td>2016-12-10 19:43:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>Support the bold steps we're taking against cl...</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2861</td>\n",
+       "      <td>2016-12-10 21:02:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>LIVE: President Obama is speaking at a recepti...</td>\n",
+       "      <td>1931</td>\n",
+       "      <td>468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2862</td>\n",
+       "      <td>2017-10-01 23:44:00</td>\n",
+       "      <td>BarackObama</td>\n",
+       "      <td>Tonight, President Obama reflects on eight yea...</td>\n",
+       "      <td>38884</td>\n",
+       "      <td>9568</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2863 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Date       author  \\\n",
+       "0    2014-01-08 14:57:00  BarackObama   \n",
+       "1    2014-01-08 17:58:00  BarackObama   \n",
+       "2    2014-01-08 18:46:00  BarackObama   \n",
+       "3    2014-01-08 18:54:00  BarackObama   \n",
+       "4    2014-01-08 18:57:00  BarackObama   \n",
+       "...                  ...          ...   \n",
+       "2858 2016-12-10 16:35:00  BarackObama   \n",
+       "2859 2016-12-10 17:57:00  BarackObama   \n",
+       "2860 2016-12-10 19:43:00  BarackObama   \n",
+       "2861 2016-12-10 21:02:00  BarackObama   \n",
+       "2862 2017-10-01 23:44:00  BarackObama   \n",
+       "\n",
+       "                                                content  number_of_likes  \\\n",
+       "0     Make #53 special for #44: http://t.co/leGTnedv...             1512   \n",
+       "1     Job growth has exceeded 200,000 for the sixth ...              816   \n",
+       "2     Happening now: President Obama delivers a stat...              491   \n",
+       "3     \"That's the longest streak of private sector j...              804   \n",
+       "4     \"The fact is we could be much further along .....             1505   \n",
+       "...                                                 ...              ...   \n",
+       "2858  Let's leave our children and grandchildren a p...            12072   \n",
+       "2859  Last week, more than 190 countries reached a l...             3283   \n",
+       "2860  Support the bold steps we're taking against cl...             1979   \n",
+       "2861  LIVE: President Obama is speaking at a recepti...             1931   \n",
+       "2862  Tonight, President Obama reflects on eight yea...            38884   \n",
+       "\n",
+       "      number_of_shares  \n",
+       "0                  726  \n",
+       "1                  556  \n",
+       "2                  288  \n",
+       "3                  619  \n",
+       "4                 1260  \n",
+       "...                ...  \n",
+       "2858              3692  \n",
+       "2859               855  \n",
+       "2860               496  \n",
+       "2861               468  \n",
+       "2862              9568  \n",
+       "\n",
+       "[2863 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_Obama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "first_date = pd.to_datetime('1/1/2015')\n",
+    "last_date = pd.to_datetime('1/1/2017')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_Obama = data_Obama[data_Obama['Date']<last_date]\n",
+    "data_Obama = data_Obama[data_Obama['Date']>first_date]\n",
+    "data_VIX = data_VIX[data_VIX['Date']<last_date]\n",
+    "data_VIX = data_VIX[data_VIX['Date']>first_date]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>3773</td>\n",
+       "      <td>2015-01-02</td>\n",
+       "      <td>17.76</td>\n",
+       "      <td>0.116279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3774</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "      <td>19.19</td>\n",
+       "      <td>0.080518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3775</td>\n",
+       "      <td>2015-01-06</td>\n",
+       "      <td>20.33</td>\n",
+       "      <td>0.059406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3776</td>\n",
+       "      <td>2015-01-07</td>\n",
+       "      <td>20.15</td>\n",
+       "      <td>-0.008854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3777</td>\n",
+       "      <td>2015-01-08</td>\n",
+       "      <td>17.93</td>\n",
+       "      <td>-0.110174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4272</td>\n",
+       "      <td>2016-12-23</td>\n",
+       "      <td>11.38</td>\n",
+       "      <td>0.005300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4273</td>\n",
+       "      <td>2016-12-27</td>\n",
+       "      <td>12.26</td>\n",
+       "      <td>0.077329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4274</td>\n",
+       "      <td>2016-12-28</td>\n",
+       "      <td>11.89</td>\n",
+       "      <td>-0.030179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4275</td>\n",
+       "      <td>2016-12-29</td>\n",
+       "      <td>13.15</td>\n",
+       "      <td>0.105971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4276</td>\n",
+       "      <td>2016-12-30</td>\n",
+       "      <td>13.20</td>\n",
+       "      <td>0.003802</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>504 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  Price    Change\n",
+       "3773 2015-01-02  17.76  0.116279\n",
+       "3774 2015-01-05  19.19  0.080518\n",
+       "3775 2015-01-06  20.33  0.059406\n",
+       "3776 2015-01-07  20.15 -0.008854\n",
+       "3777 2015-01-08  17.93 -0.110174\n",
+       "...         ...    ...       ...\n",
+       "4272 2016-12-23  11.38  0.005300\n",
+       "4273 2016-12-27  12.26  0.077329\n",
+       "4274 2016-12-28  11.89 -0.030179\n",
+       "4275 2016-12-29  13.15  0.105971\n",
+       "4276 2016-12-30  13.20  0.003802\n",
+       "\n",
+       "[504 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_VIX"
    ]
   },
   {
