--- a/CorrelationCheck.ipynb
+++ b/CorrelationCheck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -13,10 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 111,
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_VIX = pd.read_csv('VIX.csv', parse_dates=['Date'])\n",
@@ -25,136 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Change</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2000-01-03</td>\n",
-       "      <td>24.36</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2000-01-04</td>\n",
-       "      <td>24.94</td>\n",
-       "      <td>0.023810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2000-01-05</td>\n",
-       "      <td>27.98</td>\n",
-       "      <td>0.121893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2000-01-06</td>\n",
-       "      <td>26.68</td>\n",
-       "      <td>-0.046462</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>2000-01-07</td>\n",
-       "      <td>25.14</td>\n",
-       "      <td>-0.057721</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4997</td>\n",
-       "      <td>2019-11-12</td>\n",
-       "      <td>12.64</td>\n",
-       "      <td>-0.038783</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4998</td>\n",
-       "      <td>2019-11-13</td>\n",
-       "      <td>12.91</td>\n",
-       "      <td>0.021361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4999</td>\n",
-       "      <td>2019-11-14</td>\n",
-       "      <td>13.16</td>\n",
-       "      <td>0.019365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5000</td>\n",
-       "      <td>2019-11-15</td>\n",
-       "      <td>12.95</td>\n",
-       "      <td>-0.015957</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5001</td>\n",
-       "      <td>2019-11-18</td>\n",
-       "      <td>12.95</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5002 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           Date  Price    Change\n",
-       "0    2000-01-03  24.36       NaN\n",
-       "1    2000-01-04  24.94  0.023810\n",
-       "2    2000-01-05  27.98  0.121893\n",
-       "3    2000-01-06  26.68 -0.046462\n",
-       "4    2000-01-07  25.14 -0.057721\n",
-       "...         ...    ...       ...\n",
-       "4997 2019-11-12  12.64 -0.038783\n",
-       "4998 2019-11-13  12.91  0.021361\n",
-       "4999 2019-11-14  13.16  0.019365\n",
-       "5000 2019-11-15  12.95 -0.015957\n",
-       "5001 2019-11-18  12.95  0.000000\n",
-       "\n",
-       "[5002 rows x 3 columns]"
+       "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_VIX"
+    "data_VIX['Date'].dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +211,7 @@
        "[2863 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
@@ -345,8 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_Obama = data_Obama[data_Obama['Date']<last_date]\n",
@@ -357,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -475,13 +366,424 @@
        "[504 rows x 3 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_VIX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data_Obama['Date']= pd.to_datetime(data_Obama['Date'].dt.normalize())\n",
+    "data_VIX['Date']= pd.to_datetime(data_VIX['Date'].dt.normalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<M8[ns]')"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_VIX['Date'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=data_Obama[['Date','number_of_likes']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>number_of_likes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>643</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>644</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>1075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>645</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>1248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>646</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>11313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>647</td>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>1474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2857</td>\n",
+       "      <td>2016-12-10</td>\n",
+       "      <td>3211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2858</td>\n",
+       "      <td>2016-12-10</td>\n",
+       "      <td>12072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2859</td>\n",
+       "      <td>2016-12-10</td>\n",
+       "      <td>3283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2860</td>\n",
+       "      <td>2016-12-10</td>\n",
+       "      <td>1979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2861</td>\n",
+       "      <td>2016-12-10</td>\n",
+       "      <td>1931</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2219 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  number_of_likes\n",
+       "643  2015-01-01              930\n",
+       "644  2015-01-01             1075\n",
+       "645  2015-01-01             1248\n",
+       "646  2015-01-01            11313\n",
+       "647  2015-01-04             1474\n",
+       "...         ...              ...\n",
+       "2857 2016-12-10             3211\n",
+       "2858 2016-12-10            12072\n",
+       "2859 2016-12-10             3283\n",
+       "2860 2016-12-10             1979\n",
+       "2861 2016-12-10             1931\n",
+       "\n",
+       "[2219 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data_Obama.groupby('Date').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.merge(df,data_VIX, how='inner', on='Date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>number_of_likes</th>\n",
+       "      <th>number_of_shares</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2015-01-05</td>\n",
+       "      <td>4182</td>\n",
+       "      <td>3099</td>\n",
+       "      <td>19.19</td>\n",
+       "      <td>0.080518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2015-01-06</td>\n",
+       "      <td>87467</td>\n",
+       "      <td>57145</td>\n",
+       "      <td>20.33</td>\n",
+       "      <td>0.059406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2015-01-07</td>\n",
+       "      <td>16168</td>\n",
+       "      <td>6205</td>\n",
+       "      <td>20.15</td>\n",
+       "      <td>-0.008854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2015-01-08</td>\n",
+       "      <td>9612</td>\n",
+       "      <td>4116</td>\n",
+       "      <td>17.93</td>\n",
+       "      <td>-0.110174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2015-01-09</td>\n",
+       "      <td>6820</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>16.44</td>\n",
+       "      <td>-0.083101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>416</td>\n",
+       "      <td>2016-12-02</td>\n",
+       "      <td>16680</td>\n",
+       "      <td>5269</td>\n",
+       "      <td>14.16</td>\n",
+       "      <td>0.056716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>417</td>\n",
+       "      <td>2016-12-05</td>\n",
+       "      <td>21845</td>\n",
+       "      <td>6662</td>\n",
+       "      <td>13.75</td>\n",
+       "      <td>-0.028955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>418</td>\n",
+       "      <td>2016-12-07</td>\n",
+       "      <td>6614</td>\n",
+       "      <td>1576</td>\n",
+       "      <td>11.59</td>\n",
+       "      <td>-0.049221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>419</td>\n",
+       "      <td>2016-12-08</td>\n",
+       "      <td>40272</td>\n",
+       "      <td>11954</td>\n",
+       "      <td>12.10</td>\n",
+       "      <td>0.044003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>420</td>\n",
+       "      <td>2016-12-09</td>\n",
+       "      <td>23889</td>\n",
+       "      <td>8551</td>\n",
+       "      <td>12.59</td>\n",
+       "      <td>0.040496</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>421 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Date  number_of_likes  number_of_shares  Price    Change\n",
+       "0   2015-01-05             4182              3099  19.19  0.080518\n",
+       "1   2015-01-06            87467             57145  20.33  0.059406\n",
+       "2   2015-01-07            16168              6205  20.15 -0.008854\n",
+       "3   2015-01-08             9612              4116  17.93 -0.110174\n",
+       "4   2015-01-09             6820              3650  16.44 -0.083101\n",
+       "..         ...              ...               ...    ...       ...\n",
+       "416 2016-12-02            16680              5269  14.16  0.056716\n",
+       "417 2016-12-05            21845              6662  13.75 -0.028955\n",
+       "418 2016-12-07             6614              1576  11.59 -0.049221\n",
+       "419 2016-12-08            40272             11954  12.10  0.044003\n",
+       "420 2016-12-09            23889              8551  12.59  0.040496\n",
+       "\n",
+       "[421 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number_of_likes</th>\n",
+       "      <th>number_of_shares</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>number_of_likes</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.953408</td>\n",
+       "      <td>-0.016306</td>\n",
+       "      <td>0.031180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>number_of_shares</td>\n",
+       "      <td>0.953408</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.017743</td>\n",
+       "      <td>0.039245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Price</td>\n",
+       "      <td>-0.016306</td>\n",
+       "      <td>-0.017743</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.227343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Change</td>\n",
+       "      <td>0.031180</td>\n",
+       "      <td>0.039245</td>\n",
+       "      <td>0.227343</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  number_of_likes  number_of_shares     Price    Change\n",
+       "number_of_likes          1.000000          0.953408 -0.016306  0.031180\n",
+       "number_of_shares         0.953408          1.000000 -0.017743  0.039245\n",
+       "Price                   -0.016306         -0.017743  1.000000  0.227343\n",
+       "Change                   0.031180          0.039245  0.227343  1.000000"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.corr()"
    ]
   },
   {
