--- a/StockDataSaver.py.ipynb
+++ b/StockDataSaver.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,23 +15,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "interval = '60min'\n",
+    "key = 'SA4G0AMXR0JWO97I'\n",
+    "time_period = 'TIME_SERIES_INTRADAY'\n",
+    "matching_period = 'Time Series (60min)'\n",
+    "time_period = 'TIME_SERIES_DAILY'\n",
+    "matching_period = 'Time Series (Daily)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def make_request(stock):\n",
-    "    interval = '60min'\n",
-    "    key = 'SA4G0AMXR0JWO97I'\n",
-    "    time_period = 'TIME_SERIES_INTRADAY'\n",
-    "    matching_period = 'Time Series (60min)'\n",
-    "    time_period = 'TIME_SERIES_DAILY'\n",
-    "    matching_period = 'Time Series (Daily)'\n",
+    "    \n",
     "    url = 'https://www.alphavantage.co/query?function='+time_period+'&symbol='+stock+'&interval='+interval+'&outputsize=full&apikey='+key\n",
     "    return url\n",
     "def get_data(url):\n",
     "    response = requests.get(url)\n",
+    "    response_dict = json.loads(response.content)\n",
     "    time_price = [[key,response_dict[matching_period][key]['1. open']] for key in response_dict[matching_period]]\n",
     "    df = pd.DataFrame(time_price)\n",
     "    df.columns = ['Date', 'Price']\n",
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -127,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -146,12 +158,52 @@
       "text/plain": [
        "{'Meta Data': {'1. Information': 'Daily Prices (open, high, low, close) and Volumes',\n",
        "  '2. Symbol': 'VIX Volatility Index',\n",
-       "  '3. Last Refreshed': '2019-11-18',\n",
+       "  '3. Last Refreshed': '2019-11-29',\n",
        "  '4. Output Size': 'Full size',\n",
        "  '5. Time Zone': 'US/Eastern'},\n",
-       " 'Time Series (Daily)': {'2019-11-18': {'1. open': '12.9500',\n",
-       "   '2. high': '12.9700',\n",
-       "   '3. low': '11.9200',\n",
+       " 'Time Series (Daily)': {'2019-11-29': {'1. open': '12.5000',\n",
+       "   '2. high': '12.8300',\n",
+       "   '3. low': '12.1200',\n",
+       "   '4. close': '12.6200',\n",
+       "   '5. volume': '0'},\n",
+       "  '2019-11-27': {'1. open': '11.5500',\n",
+       "   '2. high': '11.7900',\n",
+       "   '3. low': '11.4400',\n",
+       "   '4. close': '11.7500',\n",
+       "   '5. volume': '0'},\n",
+       "  '2019-11-26': {'1. open': '11.8800',\n",
+       "   '2. high': '12.0400',\n",
+       "   '3. low': '11.4200',\n",
+       "   '4. close': '11.5400',\n",
+       "   '5. volume': '0'},\n",
+       "  '2019-11-25': {'1. open': '12.5100',\n",
+       "   '2. high': '12.5900',\n",
+       "   '3. low': '11.7300',\n",
+       "   '4. close': '11.8700',\n",
+       "   '5. volume': '0'},\n",
+       "  '2019-11-22': {'1. open': '12.8200',\n",
+       "   '2. high': '13.2500',\n",
+       "   '3. low': '12.3300',\n",
+       "   '4. close': '12.3400',\n",
+       "   '5. volume': '0'},\n",
+       "  '2019-11-21': {'1. open': '13.3500',\n",
+       "   '2. high': '13.8600',\n",
+       "   '3. low': '12.4900',\n",
+       "   '4. close': '13.1300',\n",
+       "   '5. volume': '0'},\n",
+       "  '2019-11-20': {'1. open': '13.4200',\n",
+       "   '2. high': '14.1700',\n",
+       "   '3. low': '12.6100',\n",
+       "   '4. close': '12.7800',\n",
+       "   '5. volume': '0'},\n",
+       "  '2019-11-19': {'1. open': '12.3300',\n",
+       "   '2. high': '13.0100',\n",
+       "   '3. low': '12.1600',\n",
+       "   '4. close': '12.8600',\n",
+       "   '5. volume': '0'},\n",
+       "  '2019-11-18': {'1. open': '12.3900',\n",
+       "   '2. high': '13.1000',\n",
+       "   '3. low': '12.3200',\n",
        "   '4. close': '12.4600',\n",
        "   '5. volume': '0'},\n",
        "  '2019-11-15': {'1. open': '12.9500',\n",
@@ -5109,50 +5161,10 @@
        "   '3. low': '18.1300',\n",
        "   '4. close': '19.3400',\n",
        "   '5. volume': '0'},\n",
-       "  '2015-12-09': {'1. open': '18.0500',\n",
-       "   '2. high': '20.1300',\n",
-       "   '3. low': '15.7200',\n",
-       "   '4. close': '19.6100',\n",
-       "   '5. volume': '0'},\n",
-       "  '2015-12-08': {'1. open': '17.6900',\n",
-       "   '2. high': '18.3300',\n",
-       "   '3. low': '16.5200',\n",
-       "   '4. close': '17.6000',\n",
-       "   '5. volume': '0'},\n",
-       "  '2015-12-07': {'1. open': '15.6500',\n",
-       "   '2. high': '17.1800',\n",
-       "   '3. low': '15.5800',\n",
-       "   '4. close': '15.8400',\n",
-       "   '5. volume': '0'},\n",
-       "  '2015-12-04': {'1. open': '17.4300',\n",
-       "   '2. high': '17.6500',\n",
-       "   '3. low': '14.6900',\n",
-       "   '4. close': '14.8100',\n",
-       "   '5. volume': '0'},\n",
-       "  '2015-12-03': {'1. open': '15.8700',\n",
-       "   '2. high': '19.3500',\n",
-       "   '3. low': '15.8600',\n",
-       "   '4. close': '18.1100',\n",
-       "   '5. volume': '0'},\n",
-       "  '2015-12-02': {'1. open': '15.0400',\n",
-       "   '2. high': '16.4900',\n",
-       "   '3. low': '14.7100',\n",
-       "   '4. close': '15.9100',\n",
-       "   '5. volume': '0'},\n",
-       "  '2015-12-01': {'1. open': '15.6100',\n",
-       "   '2. high': '16.3400',\n",
-       "   '3. low': '14.6300',\n",
-       "   '4. close': '14.6700',\n",
-       "   '5. volume': '0'},\n",
-       "  '2015-11-30': {'1. open': '15.5500',\n",
-       "   '2. high': '16.5700',\n",
-       "   '3. low': '15.5200',\n",
-       "   '4. close': '16.1300',\n",
-       "   '5. volume': '0'},\n",
        "  ...}}"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5163,15 +5175,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'2019-11-18': {'1. open': '12.9500',\n",
-       "  '2. high': '12.9700',\n",
-       "  '3. low': '11.9200',\n",
+       "{'2019-11-29': {'1. open': '12.5000',\n",
+       "  '2. high': '12.8300',\n",
+       "  '3. low': '12.1200',\n",
+       "  '4. close': '12.6200',\n",
+       "  '5. volume': '0'},\n",
+       " '2019-11-27': {'1. open': '11.5500',\n",
+       "  '2. high': '11.7900',\n",
+       "  '3. low': '11.4400',\n",
+       "  '4. close': '11.7500',\n",
+       "  '5. volume': '0'},\n",
+       " '2019-11-26': {'1. open': '11.8800',\n",
+       "  '2. high': '12.0400',\n",
+       "  '3. low': '11.4200',\n",
+       "  '4. close': '11.5400',\n",
+       "  '5. volume': '0'},\n",
+       " '2019-11-25': {'1. open': '12.5100',\n",
+       "  '2. high': '12.5900',\n",
+       "  '3. low': '11.7300',\n",
+       "  '4. close': '11.8700',\n",
+       "  '5. volume': '0'},\n",
+       " '2019-11-22': {'1. open': '12.8200',\n",
+       "  '2. high': '13.2500',\n",
+       "  '3. low': '12.3300',\n",
+       "  '4. close': '12.3400',\n",
+       "  '5. volume': '0'},\n",
+       " '2019-11-21': {'1. open': '13.3500',\n",
+       "  '2. high': '13.8600',\n",
+       "  '3. low': '12.4900',\n",
+       "  '4. close': '13.1300',\n",
+       "  '5. volume': '0'},\n",
+       " '2019-11-20': {'1. open': '13.4200',\n",
+       "  '2. high': '14.1700',\n",
+       "  '3. low': '12.6100',\n",
+       "  '4. close': '12.7800',\n",
+       "  '5. volume': '0'},\n",
+       " '2019-11-19': {'1. open': '12.3300',\n",
+       "  '2. high': '13.0100',\n",
+       "  '3. low': '12.1600',\n",
+       "  '4. close': '12.8600',\n",
+       "  '5. volume': '0'},\n",
+       " '2019-11-18': {'1. open': '12.3900',\n",
+       "  '2. high': '13.1000',\n",
+       "  '3. low': '12.3200',\n",
        "  '4. close': '12.4600',\n",
        "  '5. volume': '0'},\n",
        " '2019-11-15': {'1. open': '12.9500',\n",
@@ -10129,50 +10181,10 @@
        "  '3. low': '18.1300',\n",
        "  '4. close': '19.3400',\n",
        "  '5. volume': '0'},\n",
-       " '2015-12-09': {'1. open': '18.0500',\n",
-       "  '2. high': '20.1300',\n",
-       "  '3. low': '15.7200',\n",
-       "  '4. close': '19.6100',\n",
-       "  '5. volume': '0'},\n",
-       " '2015-12-08': {'1. open': '17.6900',\n",
-       "  '2. high': '18.3300',\n",
-       "  '3. low': '16.5200',\n",
-       "  '4. close': '17.6000',\n",
-       "  '5. volume': '0'},\n",
-       " '2015-12-07': {'1. open': '15.6500',\n",
-       "  '2. high': '17.1800',\n",
-       "  '3. low': '15.5800',\n",
-       "  '4. close': '15.8400',\n",
-       "  '5. volume': '0'},\n",
-       " '2015-12-04': {'1. open': '17.4300',\n",
-       "  '2. high': '17.6500',\n",
-       "  '3. low': '14.6900',\n",
-       "  '4. close': '14.8100',\n",
-       "  '5. volume': '0'},\n",
-       " '2015-12-03': {'1. open': '15.8700',\n",
-       "  '2. high': '19.3500',\n",
-       "  '3. low': '15.8600',\n",
-       "  '4. close': '18.1100',\n",
-       "  '5. volume': '0'},\n",
-       " '2015-12-02': {'1. open': '15.0400',\n",
-       "  '2. high': '16.4900',\n",
-       "  '3. low': '14.7100',\n",
-       "  '4. close': '15.9100',\n",
-       "  '5. volume': '0'},\n",
-       " '2015-12-01': {'1. open': '15.6100',\n",
-       "  '2. high': '16.3400',\n",
-       "  '3. low': '14.6300',\n",
-       "  '4. close': '14.6700',\n",
-       "  '5. volume': '0'},\n",
-       " '2015-11-30': {'1. open': '15.5500',\n",
-       "  '2. high': '16.5700',\n",
-       "  '3. low': '15.5200',\n",
-       "  '4. close': '16.1300',\n",
-       "  '5. volume': '0'},\n",
        " ...}"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10183,10 +10195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "time_price = [[key,response_dict[matching_period][key]['1. open']] for key in response_dict[matching_period]]"
@@ -10194,13 +10204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['2019-11-18', '12.9500'],\n",
+       "[['2019-11-29', '12.5000'],\n",
+       " ['2019-11-27', '11.5500'],\n",
+       " ['2019-11-26', '11.8800'],\n",
+       " ['2019-11-25', '12.5100'],\n",
+       " ['2019-11-22', '12.8200'],\n",
+       " ['2019-11-21', '13.3500'],\n",
+       " ['2019-11-20', '13.4200'],\n",
+       " ['2019-11-19', '12.3300'],\n",
+       " ['2019-11-18', '12.3900'],\n",
        " ['2019-11-15', '12.9500'],\n",
        " ['2019-11-14', '13.1600'],\n",
        " ['2019-11-13', '12.9100'],\n",
@@ -11192,18 +11210,10 @@
        " ['2015-12-14', '24.7000'],\n",
        " ['2015-12-11', '21.3600'],\n",
        " ['2015-12-10', '19.2500'],\n",
-       " ['2015-12-09', '18.0500'],\n",
-       " ['2015-12-08', '17.6900'],\n",
-       " ['2015-12-07', '15.6500'],\n",
-       " ['2015-12-04', '17.4300'],\n",
-       " ['2015-12-03', '15.8700'],\n",
-       " ['2015-12-02', '15.0400'],\n",
-       " ['2015-12-01', '15.6100'],\n",
-       " ['2015-11-30', '15.5500'],\n",
        " ...]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
