added more ml stuff and processing

--- a/News Processing.ipynb
+++ b/News Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "conn = sqlite3.connect(\"all-the-news.db\")"
@@ -23,27 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x11755fc70>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cur = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +54,7 @@
        "[('longform',)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,8 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "table = pd.read_sql_query(\"SELECT * from longform\", conn)"
@@ -83,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +341,7 @@
        "[204135 rows x 12 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +704,7 @@
        "Washington Post         12051    12051    12051  12051  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -733,22 +726,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "for pub in interesting_pubs:\n",
-    "    df = table[table['publication']==interesting_pubs]\n",
+    "    df = table[table['publication']==pub]\n",
     "    df = df[['title','author','date']]\n",
+    "    df = df.rename(columns={'date':'Date'})\n",
+    "    df['Date'] = pd.to_datetime(df['Date'],  errors='coerce')\n",
+    "    df = df.sort_values(by='Date')\n",
     "    df.to_csv(pub+'.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = table[table['publication']=='CNN']"
@@ -756,153 +754,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "df = df[['title','author','date']]"
+    "df = df[['title','author','date']]\n",
+    "df = df.rename(columns={'date':'Date'})\n",
+    "df['Date'] = pd.to_datetime(df['Date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>author</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>41840</td>\n",
-       "      <td>Istanbul attack: Dozens killed at nightclub</td>\n",
-       "      <td>Euan McKirdy</td>\n",
-       "      <td>2016-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>41841</td>\n",
-       "      <td>Alabama, Clemson back in national title game</td>\n",
-       "      <td>Jill Martin</td>\n",
-       "      <td>2016-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>41842</td>\n",
-       "      <td>New year celebrations ring in 2017</td>\n",
-       "      <td>Ray Sanchez</td>\n",
-       "      <td>2016-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>41843</td>\n",
-       "      <td>Trump says he has inside information on hacking</td>\n",
-       "      <td>Kevin Liptak</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>41844</td>\n",
-       "      <td>3 dead in Texas plane crash collision</td>\n",
-       "      <td>Tony Marco</td>\n",
-       "      <td>2017-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56123</td>\n",
-       "      <td>Body painter makes models disappear  - CNN Video</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2015-08-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56124</td>\n",
-       "      <td>Hunter Sabrina Corgatelli slammed for giraffe ...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2015-08-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56125</td>\n",
-       "      <td>Kelly Osbourne's Trump slam backfires - CNN Video</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2015-08-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56126</td>\n",
-       "      <td>Dental discovery stuns patient - CNN Video</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2015-08-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>56127</td>\n",
-       "      <td>Victims' families confront MH370 officials - C...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2015-08-06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>14288 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                   title        author  \\\n",
-       "41840        Istanbul attack: Dozens killed at nightclub  Euan McKirdy   \n",
-       "41841       Alabama, Clemson back in national title game   Jill Martin   \n",
-       "41842                 New year celebrations ring in 2017   Ray Sanchez   \n",
-       "41843    Trump says he has inside information on hacking  Kevin Liptak   \n",
-       "41844              3 dead in Texas plane crash collision    Tony Marco   \n",
-       "...                                                  ...           ...   \n",
-       "56123   Body painter makes models disappear  - CNN Video          None   \n",
-       "56124  Hunter Sabrina Corgatelli slammed for giraffe ...          None   \n",
-       "56125  Kelly Osbourne's Trump slam backfires - CNN Video          None   \n",
-       "56126         Dental discovery stuns patient - CNN Video          None   \n",
-       "56127  Victims' families confront MH370 officials - C...          None   \n",
-       "\n",
-       "             date  \n",
-       "41840  2016-12-31  \n",
-       "41841  2016-12-31  \n",
-       "41842  2016-12-31  \n",
-       "41843  2017-01-01  \n",
-       "41844  2017-01-01  \n",
-       "...           ...  \n",
-       "56123  2015-08-05  \n",
-       "56124  2015-08-04  \n",
-       "56125  2015-08-04  \n",
-       "56126  2015-08-03  \n",
-       "56127  2015-08-06  \n",
-       "\n",
-       "[14288 rows x 3 columns]"
+       "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.to_csv()"
+    "df['Date'].dtype"
    ]
   },
   {
